Fixed jquery.scrollstory.js file path

--- a/documentation/categories.html
+++ b/documentation/categories.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         // make existing elements 60% of window height
