--- a/documentation/data-attributes.html
+++ b/documentation/data-attributes.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $('.story').css({'height': $(window).height() * 0.6 });
