--- a/documentation/from-data.html
+++ b/documentation/from-data.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $.getJSON('http://www.filltext.com/?callback=?', {
