--- a/documentation/basic.html
+++ b/documentation/basic.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         // make existing elements 60% of window height
