--- a/documentation/demo.html
+++ b/documentation/demo.html
@@ -61,7 +61,7 @@
             <div class="custom">Antarctica</div>
         </div>
         <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.scrollstory.js"></script>
+        <script src="../dist/jquery.scrollstory.js"></script>
 		<script>
 			$(function() {
 
