--- a/documentation/event-itemfilter.html
+++ b/documentation/event-itemfilter.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $('#status').hide();
