--- a/documentation/event-itemfocus.html
+++ b/documentation/event-itemfocus.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $('#status').hide();
