--- a/documentation/events-and-callbacks.html
+++ b/documentation/events-and-callbacks.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         // make existing elements 60% of window height
