--- a/documentation/huge-list.html
+++ b/documentation/huge-list.html
@@ -51,7 +51,7 @@
         <div class="stories"></div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.scrollstory.js"></script>
+    <script src="../dist/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         console.time('startDownload');
